--- a/index.html
+++ b/index.html
@@ -1,7 +1,54 @@
 <!doctype html>
 <html>
 <head>
-<title>My webpage</title>
+<title>My webpage1</title>
 </head>
-<body>
-	
+<body> 
+	<form action='test' method='get'>
+		<p>Please fill in the following information:</p>
+
+    	<label for="firstname">First name:</label>
+    	<input type="text" name="firstname" value="Dave" autofocus>
+    	<br>
+    	<label for="lastname">Last name:</label>
+    	<input type="text" name="lastname" placeholder="Your last name goes here">
+   		<br>
+    	<label for="age">Age:</label>
+    	<input type="text" name="age" required>
+    	<br>
+    	
+
+		<p>Please enter any feed back you have.</p>
+
+		<textarea rows='3' cols='60' name='feedback' autofocus>Please enter your text here
+		</textarea>
+		<br>
+		<input type='file' name='fileToUpload'>
+		<br>
+		Please select each of the following that you have. <br>
+		<input type='checkbox' name='items' value='car'> Car <br>
+		<input type='checkbox' name='items' value='bear'> Car <br>
+		<input type='checkbox' name='items' value='tooth'> Car <br>
+		<p>What city are you in</p>
+
+		<select name = 'where'>
+			<option value='hk'>Hong Kong</option>
+			<option value='shanghai'>Shanghai</option>
+		</select>
+		
+		<br>
+
+    	<label for="age">Your age:</label>
+    	<input type="number" min="0" max="99" step="1" value="18" name="age" required><br>
+    	<label for="birthday">Your birthday:</label>
+    	<input type="date" name="birthday"><br>
+    	<label for="wakeup">You want to wake up at:</label>
+    	<input type="time" name="wakeup"><br>
+    	<label for="color">Your favorite color:</label>
+    	<input type="color" name="color"> <br>
+    	<label for="mood">Your mood:</label>
+    	Bad <input type="range" min="0" max="100" step="5" value="50" name="mood"> Good<br>
+		<input type="submit" value="Submit">	
+	</form>
+</body>
+</html>
