Forgotten labels are added

--- a/HTML_CSS_JS/part1.html
+++ b/HTML_CSS_JS/part1.html
@@ -45,8 +45,12 @@
 		</fieldset>
 		<fieldset >
 			<legend>Your Indicators</legend>
-			Short <input type="range" min="0" max="100" value="50" name="height"> Tall<br>
-			Poor <input type="range" min="0" max="100" value="50" name="salary"> Rich<br>
+			<div>
+			<label for="height">Height:</label>
+			<span>Short</span><input type="range" min="0" max="100" value="50" name="height"><span>Tall</span><br>
+			<label for="height">Salary:</label>
+			<span>Poor </span><input type="range" min="0" max="100" value="50" name="salary"><span>Rich</span><br>
+			</div>
 		</fieldset>
 		<fieldset >
 			<legend>Your Contact Information</legend>
@@ -66,5 +70,6 @@
 		</fieldset>
 		<input type="submit">
 	</form>
+	<script src="https://www.cse.ust.hk/~rossiter/dating_web_site.js"></script>
 </body>
 </html>
