--- a/HTML_CSS_JS/part2.html
+++ b/HTML_CSS_JS/part2.html
@@ -55,8 +55,10 @@
 		</fieldset>
 		<fieldset >
 			<legend>Your Indicators</legend>
-			<div class="qwe">
+			<div>
+			<label for="height">Height:</label>
 			<span>Short</span><input type="range" min="0" max="100" value="50" name="height"><span>Tall</span><br>
+			<label for="height">Salary:</label>
 			<span>Poor </span><input type="range" min="0" max="100" value="50" name="salary"><span>Rich</span><br>
 			</div>
 		</fieldset>
