--- a/HTML_CSS_JS/part3.html
+++ b/HTML_CSS_JS/part3.html
@@ -9,7 +9,6 @@
 		span {background:red; font-weight: bold; font-family: Arial}
 		fieldset div input{text-align:center}
 		fieldset textarea {width:360px; height:50px}
-		.qwe {margin-left: 150px}
 		label:hover {font-size:25px}
 		input:hover {font-size:25px}
 		
@@ -59,8 +58,10 @@
 		</fieldset>
 		<fieldset >
 			<legend>Your Indicators</legend>
-			<div class="qwe">
+			<div>
+			<label for="height">Height:</label>
 			<span>Short</span><input type="range" min="0" max="100" value="50" name="height"><span>Tall</span><br>
+			<label for="height">Salary:</label>
 			<span>Poor </span><input type="range" min="0" max="100" value="50" name="salary"><span>Rich</span><br>
 			</div>
 		</fieldset>
