--- a/Resume/Resume.html
+++ b/Resume/Resume.html
@@ -3,23 +3,23 @@
 <html><head lang="en"><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>李强强的简历</title>
+    <title>Ji Yang's Resume</title>
     <link href="resumeY.css" rel="stylesheet">
 </head>
 <body>
 <div id="main">
     <div id="main-left">
         <div class="head-img"></div>
-        <h2 class="head-name">李强强</h2>
+        <h2 class="head-name">Ji Yang</h2>
 
-        <h3 class="head-name">BYSocket</h3>
+        <h3 class="head-name">University of Alberta</h3>
 
         <div class="line line-normal"></div>
         <div class="head-desc-block">
             <img class="icon head-icon" src="./李强强的简历_files/iconfont-xinxi.png">
 
             <div class="head-desc">
-                <h3>Java 工程师</h3>
+                <h3>Job Title</h3>
                 <h5>&nbsp;</h5>
                 <h4>Think，Write &amp; Do</h4>
                 <h5>&nbsp;</h5>
@@ -49,12 +49,12 @@
                 <div class="skill-line skill-line-4">
                     <a class="sl-point"></a>
                 </div>
-                <h5>Architecture</h5>
+                <h5>Python</h5>
 
                 <div class="skill-line skill-line-3">
                     <a class="sl-point"></a>
                 </div>
-                <h5>Server</h5>
+                <h5>HTML/CSS/JavaScript</h5>
 
                 <div class="skill-line skill-line-3">
                     <a class="sl-point"></a>
@@ -66,23 +66,19 @@
             <ul class="head-connect">
                 <li>
                     <span class="phone-icon"></span>
-                    <a href="tel:13958686678">13958686678</a>
+                    <a href="tel:17807299403">17807299403</a>
                 </li>
                 <li>
                     <span class="mail-icon"></span>
-                    <a href="mailto://bysocket@aliyun.com">&nbsp;bysocket@aliyun.com</a>
+                    <a href="mailto://jyang7@ualberta.ca">&nbsp;jyang7@ualberta.ca</a>
                 </li>
                 <li>
                     <span class="github-icon"></span>
-                    <a href="https://www.github.com/JeffLi1993">&nbsp;github.com/JeffLi1993</a>
-                </li>
-                <li>
-                    <span class="blog-icon"></span>
-                    <a href="http://www.bysocket.com/">&nbsp;bysocket.com</a>
+                    <a href="https://www.github.com/jiyange">&nbsp;github.com/jiyange</a>
                 </li>
                 <li>
                     <span class="wechat-icon"></span>
-                    <a>&nbsp;13958686678</a>
+                    <a>&nbsp;457536691</a>
                 </li>
             </ul>
         </div>
@@ -91,18 +87,18 @@
     <div id="main-right">
         <div class="ct-block">
             <span class="power-icon"></span>
-            <span class="ct-title">专业技能</span>
+            <span class="ct-title">Professional Skills</span>
 
             <div class="ct-content">
-                <h3 class="ct-item-title">&nbsp;  •	计算机语言</h3>
+                <h3 class="ct-item-title">&nbsp; •	Programming Language</h3>
                 <h4>
-                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;熟悉Java , 了解C	
+                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Java, Python	
                 </h4>
-                <h3 class="ct-item-title">&nbsp; •	数据库软件</h3>
+                <h3 class="ct-item-title">&nbsp; •	Database</h3>
                 <h4>
                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MySQL , SQL Server
                 </h4>
-                <h3 class="ct-item-title">&nbsp; •	开发环境</h3>
+                <h3 class="ct-item-title">&nbsp; •	Developing Environment</h3>
                 <h4>
                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Eclipse , IntelliJ
                 </h4>
