--- a/Web Frameworks/conFusion/index.html
+++ b/Web Frameworks/conFusion/index.html
@@ -3,7 +3,15 @@
 <html lang="en">
 
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ristorante Con Fusion</title>
+    
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+
+
 </head>
 
 <body>
@@ -25,7 +33,7 @@
         </div>
     </header>
 
-    <div>
+    <div class='container'>
         <div>
             <div>
                 <p style="padding:20px;"></p>
@@ -105,6 +113,11 @@
             </div>
         </div>
     </footer>
+
+    
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="../dist/js/bootstrap.min.js"></script>
 
 </body>
 
