--- a/Web Frameworks/conFusion/index.html
+++ b/Web Frameworks/conFusion/index.html
@@ -13,6 +13,7 @@
     <link href="css/my.css" rel="stylesheet">
     <link href="css/font-awesome.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/bootstrap-social.css" rel="stylesheet">
     
     
 </head>
