--- a/Web Frameworks/conFusion/aboutus.html
+++ b/Web Frameworks/conFusion/aboutus.html
@@ -33,17 +33,18 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
+                <a class="navbar-brand" href="index.html">Ristorante Con Fusion</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#"><span class="glyphicon glyphicon-home"
+                    <li><a href="index.html"><span class="glyphicon glyphicon-home"
                          aria-hidden="true"></span> Home</a></li>
-                    <li><a href="#">About</a></li>
+                    <li class="active"><a href="aboutus.html"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> About</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                          role="button" aria-haspopup="true" aria-expanded="false">
-                         Menu <span class="caret"></span></a>
+                         <span class="glyphicon glyphicon-menu-hamburger"
+                         aria-hidden="true"></span> Menu <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Appetizers</a></li>
                             <li><a href="#">Main Courses</a></li>
@@ -53,7 +54,7 @@
                             <li class="dropdown-header">Specials</li>
                             <li><a href="#">Lunch Buffet</a></li>
                             <li><a href="#">Weekend Brunch</a></li>
-                        </ul>
+                        </ul>   
                     </li>
                     <li><a href="#">Contact</a></li>
                 </ul>
@@ -77,10 +78,13 @@
         </div>
     </header>
 
-    <div>
+    <div class="container">
         <div>
             <div>
-                Breadcrumbs go here
+                <ol class="breadcrumb">
+                    <li><a href="index.html">Home</a></li>
+                    <li class="active">About Us</li>
+                </ol>
             </div>
             <div>
                <h3>About Us</h3>
@@ -88,7 +92,7 @@
             </div>
         </div>
         
-        <div>
+        <div class="row row-content">
             <div>
                 <h2>Our History</h2>
                 <p>Started in 2010, Ristorante con Fusion quickly established itself as a culinary icon par excellence in Hong Kong. With its unique brand of world fusion cuisine that can be found nowhere else, it enjoys patronage from the A-list clientele in Hong Kong.  Featuring four of the best three-star Michelin chefs in the world, you never know what will arrive on your plate the next time you visit us.</p>
@@ -125,8 +129,8 @@
                 <div class="col-xs-5 col-xs-offset-1 col-sm-2 col-sm-offset-1">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="aboutus.html">About</a></li>
                         <li><a href="#">Menu</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
