Add login, reservation

--- a/Web Frameworks/conFusion/aboutus.html
+++ b/Web Frameworks/conFusion/aboutus.html
@@ -24,7 +24,6 @@
     <style>
         h2 {font-weight: bold}
         h3 {font-weight: bold}
-    
     </style>
 </head>
 
@@ -43,8 +42,10 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="index.html"><span class="glyphicon glyphicon-home"
-                         aria-hidden="true"></span> Home</a></li>
-                    <li class="active"><a href="aboutus.html"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> About</a></li>
+                         aria-hidden="true"></span> Home</a>
+                    </li>
+                    <li class="active"><a href="aboutus.html"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> About</a>
+                    </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                          role="button" aria-haspopup="true" aria-expanded="false">
@@ -61,10 +62,22 @@
                             <li><a href="#">Weekend Brunch</a></li>
                         </ul>   
                     </li>
-                    <li><a href="contactus.html"><i class="fa fa-envelope-o"></i> Contact</a></li>
+                    <li><a href="contactus.html"><i class="fa fa-envelope-o"></i> Contact</a>                         </li>
                 </ul>
+                <form class="navbar-form navbar-right" role="search">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Username">
+                        <input type="text" class="form-control" placeholder="Password">
+                        <label><input type="checkbox"> Remember me!</label>
+
+
+                        </div>
+                    <button type="submit" class="btn btn-primary">Sign in</button>
+                </form>
             </div>
+
         </div>
+        
     </nav>  
     <header class="jumbotron">
 
