Change the button size, rearrange the form and login

--- a/Web Frameworks/conFusion/index.html
+++ b/Web Frameworks/conFusion/index.html
@@ -57,7 +57,9 @@
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Username">
                             <input type="text" class="form-control" placeholder="Password">
-                            <label style="color: white" ><input type="checkbox"> Remember me!</label>
+                            <label style="color:white" class="checkbox-inline">
+                                <input type="checkbox" id="inlineCheckbox1" value="option1"> Remember me! 
+                            </label>
 
 
                         </div>
@@ -82,9 +84,10 @@
                     <p style="padding:20px;"></p>
                     <img src="img/logo.png" class="img-responsive">
                     </div>
-                    <div class='col-xs-12 col-sm-6 text-center'>
+                    <div class='col-xs-12 col-sm-6'>
                         <p style="padding:35px;"></p>
-                        <button type="submit" class="btn btn-warning center-block"><a href="#dest"></a>Reserve now!</button>
+                         
+                        <a href="#dest"><button type="submit" style="width:165px" class="btn btn-warning center-block">Reserve now!</button></a>
                         
                     </div>
                 </div>
