Adjust the login bar in Webframework

--- a/Web Frameworks/conFusion/aboutus.html
+++ b/Web Frameworks/conFusion/aboutus.html
@@ -64,16 +64,18 @@
                     </li>
                     <li><a href="contactus.html"><i class="fa fa-envelope-o"></i> Contact</a>                         </li>
                 </ul>
-                <form class="navbar-form navbar-right" role="search">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Username">
-                        <input type="text" class="form-control" placeholder="Password">
-                        <label><input type="checkbox"> Remember me!</label>
+                    <form class="navbar-form navbar-right" role="search">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Username">
+                            <input type="text" class="form-control" placeholder="Password">
+                            <label style="color:white" class="checkbox-inline">
+                                <input type="checkbox" id="inlineCheckbox1" value="option1"> Remember me! 
+                            </label>
 
 
                         </div>
-                    <button type="submit" class="btn btn-primary">Sign in</button>
-                </form>
+                        <button type="submit" class="btn btn-primary">Sign in</button>
+                    </form>
             </div>
 
         </div>
