Reformat, apply the login dialog to all pages

--- a/Web Frameworks/conFusion/index.html
+++ b/Web Frameworks/conFusion/index.html
@@ -67,7 +67,7 @@
     
     
     <div id="loginModal" class="modal fade" role="dialog">
-        <div class="modal-dialog">
+        <div class="modal-dialog card">
                 <!-- Modal content-->
                 <div class="modal-content">
                     <div class="modal-header">
@@ -88,7 +88,6 @@
                                 <label><input type="checkbox" value=""> Remember me</label>
                             </div>
                             <button type="button" class="btn btn-info btn-sm">Sign in</button>
-                            <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel</button>
                         </form>           
                     </div>
                 </div>
