--- a/Web Frameworks/conFusion/aboutus.html
+++ b/Web Frameworks/conFusion/aboutus.html
@@ -72,7 +72,7 @@
     </nav>  
     
     <div id="loginModal" class="modal fade" role="dialog">
-        <div class="modal-dialog card">
+        <div class="modal-dialog card-dialog">
                 <!-- Modal content-->
                 <div class="modal-content">
                     <div class="modal-header">
@@ -132,7 +132,7 @@
                     <div class="col-xs-12 col-sm-10">
                         <div class = "row">
                             <div class="col-xs-12">
-                                <ol class="breadcrumb">
+                                <ol class="breadcrumb card-bread">
                                     <li><a href="index.html">Home</a></li>
                                     <li class="active">About Us</li>
                                 </ol>
