--- a/Web Frameworks/conFusion/contactus.html
+++ b/Web Frameworks/conFusion/contactus.html
@@ -21,6 +21,10 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>
+        h2 {font-weight: bold}
+        h3 {font-weight: bold}
+    </style>
 </head>
 
     
@@ -72,7 +76,7 @@
     </nav>  
 
     <div id="loginModal" class="modal fade" role="dialog">
-        <div class="modal-dialog card">
+        <div class="modal-dialog card-dialog">
                 <!-- Modal content-->
                 <div class="modal-content">
                     <div class="modal-header">
@@ -130,7 +134,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-               <ul class="breadcrumb">
+               <ul class="breadcrumb card-bread">
                    <li><a href="index.html">Home</a></li>
                    <li class="active">Contact Us</li>
                </ul>
