--- a/Web Frameworks/conFusion/index.html
+++ b/Web Frameworks/conFusion/index.html
@@ -175,11 +175,11 @@
                                 <div class='col-xs-12 col-sm-3'>
                                 <label for="dateAndTime" style="padding:3px; text-align:right; display:inline-block"> &nbsp;&nbsp;&nbsp;&nbsp; Date & Time:</label>
                                 </div>
-                                <div class="col-sm-4">
+                                <div class="col-sm-4 has-feedback">
                                     <input type="text" class="form-control" placeholder="Date">
                                     <span class="glyphicon glyphicon-calendar form-control-feedback" aria-hidden="true">&nbsp;&nbsp;</span>
                                 </div>
-                                <div class="col-sm-4">
+                                <div class="col-sm-4 has-feedback">
                                     <input type="text" class="form-control" placeholder="Time">
                                     <span class="glyphicon glyphicon-time form-control-feedback" aria-hidden="true">&nbsp;&nbsp;</span>
                                 </div>
