--- a/bootstrapDemo/conFusion/index.html
+++ b/bootstrapDemo/conFusion/index.html
@@ -57,7 +57,8 @@
                     <li><a href="contactus.html"><i class="fa fa-envelope-o"></i> Contact</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a data-toggle="modal" data-target="#loginModal">
+                    <li><a id="myLogin"> 
+                        <!-- data-target="#loginModal">-->
                     <span class="glyphicon glyphicon-log-in"></span> Login</a>
                     </li>
                 </ul>
@@ -113,7 +114,7 @@
                     </div>
                     <div class='col-xs-12 col-sm-12 col-md-6'>
                         <p style="padding:35px;"></p>
-                        <a type="button" class="btn btn-warning btn-block" data-toggle="modal" data-target="#reserveModal">Reserve Now!</a>
+                        <a type="button" class="btn btn-warning btn-block" id = "myRes">Reserve Now!</a>
                     </div>
                 </div>
             </div>
@@ -127,7 +128,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <button type="button" class="close">&times;</button>
                     <h4 class="modal-title">Reserve Table </h4>
                 </div>
                 <div class="modal-body">
@@ -411,6 +412,18 @@
             });
                         $("#carousel-play").click(function(){
                 $("#mycarousel").carousel('cycle');
+            });
+        });
+    </script>
+    <script>
+        $(document).ready(function(){
+            $("#myLogin").click(function(){
+                $("#loginModal").modal();
+            });
+        });
+        $(document).ready(function(){
+            $("#myRes").click(function(){
+                $("#reserveModal").modal();
             });
         });
     </script>
