--- a/JQuery/MagicButton/index.html
+++ b/JQuery/MagicButton/index.html
@@ -2,7 +2,9 @@
 	<head>
 		<title>Button Magic</title>
         <link rel='stylesheet' type='text/css' href='stylesheet.css'/>
-        <script type='text/javascript' src='script.js'></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
+        </script>
+        <script src="script.js"></script>
 	</head>
 	<body>
      <div><br/><strong>Click Me!</strong></div>   
