--- a/frontend_basic/Week 3/part4.html
+++ b/frontend_basic/Week 3/part4.html
@@ -3,6 +3,8 @@
 <html>
 <head>
     <title>JavaScript Matching Game</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
+    </script>
     <style>
 		img {position:absolute}
 		div {position:absolute; width:500px; height:500px}
@@ -31,7 +33,6 @@
                 while (count <= numberOfFaces){
                     var smileImg = document.createElement('img')
                     smileImg.src = "http://home.cse.ust.hk/~rossiter/mooc/matching_game/smile.png";
-                    
                     smileImg.style.left = Math.floor(Math.random() * 400) + 'px';
                     smileImg.style.top = Math.floor(Math.random() * 400) + 'px';
                     theLeftSide.appendChild(smileImg);
@@ -52,10 +53,14 @@
                 alert("Game Over!");
                 theBody.onclick = null;
                 theLeftSide.lastChild.onclick = null;
+                removeAllChildren(theLeftSide);
+                removeAllChildren(theRightSide);
+                generateFaces();
             }; 
             }
 
         </script>
+        <script src="script.js"></script>
     </body>
 </html>
 
