Include a bootstrap thumbnail into template

--- a/meteor/image_share/image_share.html
+++ b/meteor/image_share/image_share.html
@@ -1,13 +1,28 @@
 <head>
-  <title>image_share</title>
+    <title>image_share</title>
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
-
-  {{> images}}
+    <h1>Welcome to Meteor!</h1>
+    <div class="container">
+        {{> images}}    
+    </div>
 </body>
 
 <template name="images">
-    <img src="{{img_src}}" alt="{{img_alt}}"/>
+    <div class="row">
+        {{#each images}}
+        <div class="col-xs-12 col-md-4">
+            <div class="thumbnail">
+                <img src="{{img_src}}" alt="{{img_alt}}"/>
+            </div> 
+            <div class="caption">
+                <h3>Label</h3>
+                <p>Description of the image</p>
+            </div>
+        </div> 
+        {{/each}}
+    </div>
+
+
 </template>
