--- a/meteor/my_first_app/my_first_app.html
+++ b/meteor/my_first_app/my_first_app.html
@@ -1,14 +1,14 @@
 <head>
-  <title>my_first_app</title>
+    <title>my_first_app</title>
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
+    <h1>Welcome from Edmonton</h1>
 
-  {{> hello}}
+    {{> hello}}
 </body>
 
 <template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+    <p>Current time is: {{time}}</p><br>
+
 </template>
