--- a/Coursera_AngularJS/conFusion/app/menu.html
+++ b/Coursera_AngularJS/conFusion/app/menu.html
@@ -22,7 +22,7 @@
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
     </head>
-    <body>
+    <body ng-app="confusionApp">
 
         <div class="container">
             <div class="row row-content" ng-controller="menuController as menuCtrl">
@@ -53,7 +53,7 @@
                                 <div class="media-left media-middle">
                                     <a href="#">
                                     <img class="media-object img-thumbnail"
-                                         ng-src={{dish.image}} alt="Uthappizza">
+                                         ng-src="{{dish.image}}" alt="Uthappizza">
                                     </a>
                                 </div>
                                 <div class="media-body" >
