--- a/meteor/image_share/image_share.html
+++ b/meteor/image_share/image_share.html
@@ -12,7 +12,7 @@
 <template name="images">
     <div class="row">
         {{#each images}}
-        <div class="col-xs-12 col-md-4">
+        <div class="col-xs-12 col-md-4" id="{{_id}}">
             <div class="thumbnail">
                 
                 <img class="js-image" src="{{img_src}}" alt="{{img_alt}}"/>
@@ -20,6 +20,7 @@
                 <div class="caption">
                     <h3>Label</h3>
                     <p>Description of the image</p>
+                    <button class="js-del-image btn btn-warning">Delete</button>
                 </div>
                 
             </div> 
