--- a/meteor/image_share/image_share.html
+++ b/meteor/image_share/image_share.html
@@ -3,16 +3,26 @@
 </head>
 
 <body>
+    {{> image_add_form}}
     <h1>Hello from Edmonton, CA</h1>
     <div class="container">
         {{> images}}    
     </div>
 </body>
 
+<template name="image_add_form">
+    <form class="js-add-image">
+        <input type="text" name="img_src"/>
+        <br/>
+        <input type="text" name="img_alt"/>
+        <button class="btn btn-success">Save!</button>
+    </form>
+</template>
+
 <template name="images">
     <div class="row">
         {{#each images}}
-        <div class="col-xs-12 col-md-4" id="{{_id}}">
+        <div class="col-xs-12 col-md-3" id="{{_id}}">
             <div class="thumbnail">
                 
                 <img class="js-image" src="{{img_src}}" alt="{{img_alt}}"/>
