--- a/meteor/image_share/image_share.html
+++ b/meteor/image_share/image_share.html
@@ -11,15 +11,33 @@
 </body>
 
 <template name="image_add_form">
-    <form class="js-add-image">
-        <input type="text" name="img_src"/>
-        <br/>
-        <input type="text" name="img_alt"/>
-        <button class="btn btn-success">Save!</button>
-    </form>
+    <div class="modal fade" id="image_form_modal">
+        <div class="modal-dialog">
+            <div class="modal-header">
+                <div class="modal-title">
+                </div>
+            </div>
+            <div class="modal-body">
+                <form class="js-add-image">
+                    <label class="">Image URL</label>
+                    <input type="text" name="img_src"/>
+                    <br/>
+                    <label class="">Image ALT </label>
+                    <input type="text" name="img_alt"/><br>
+                    <button class="btn btn-success">Save!</button>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-warning" data-dismiss="modal">Cancel
+                </button>
+            </div>
+        </div>
+    </div>
+
 </template>
 
 <template name="images">
+    <button class="btn btn-success js-show-me-modal">Add a new image!</button><p></p>
     <div class="row">
         {{#each images}}
         <div class="col-xs-12 col-md-3" id="{{_id}}">
@@ -29,9 +47,9 @@
                 
                 <div class="caption">
                     <h3>Rating: {{rating}}</h3>
-                    <p>Description of the image</p>
+                    <p>{{img_alt}}</p>
                     <p>
-                        {{> starsRating mutable=true class="js-rate-image" id=_id}}
+                        {{> starsRating mutable=true class="js-rate-image" data_id=_id}}
                     </p>
                     
                     <button class="js-del-image btn btn-warning">Delete</button>
