--- a/Coursera_AngularJS/conFusion/app/dishdetail.html
+++ b/Coursera_AngularJS/conFusion/app/dishdetail.html
@@ -96,6 +96,8 @@
         <!--  build:js scripts/main.js-->
         <script src="../bower_components/angular/angular.min.js"></script>
         <script type="text/javascript" src="scripts/app.js"></script>
+        <script src="scripts/controllers.js"></script>
+        <script src="scripts/services.js"></script>
         <!--  endbuild -->
     </body>
 </html>
