--- a/Coursera_AngularJS/conFusion/app/index.html
+++ b/Coursera_AngularJS/conFusion/app/index.html
@@ -79,7 +79,7 @@
             </div>
         </div>
     </header>
-    <ng-include src="'menu.html'"></ng-include>
+    <ng-include src="'menu.html'"></ng-include>b
     <footer class="row-footer">
         <div class="container">
             <div class="row">             
