--- a/meteor/portfolio_website/client/header.html
+++ b/meteor/portfolio_website/client/header.html
@@ -10,10 +10,10 @@
             <a href="news">News</a>
           </li>
           <li>
-            <a href="{{blogPathFor "blogIndex"}}">Blog</a>
+            <a href='{{blogPathFor "blogIndex"}}'>Blog</a>
           </li>
           <li>
-            <a href="{{blogPathFor "blogAdmin"}}">Admin Area (must login)</a>
+            <a href='{{blogPathFor "blogAdmin"}}'>Admin Area (must login)</a>
           </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
